# ChessBoard

./: CMakeLists.txt  README.md  embbeded_chess_logic.h  esp32_code.cpp  main.cpp  mock_hardware_board.cpp  test_utilities.h  vcpkg.json
